tests/failure/missing/semicolon_6.expected
syntax error: expected ";" before "symbol": line 9, column 5 to line 9, column 5:
    F < F > * --> FF;
    ^

